@@ -6,7 +6,7 @@ Author: Colin A. Smith <csmith@scripps.edu>,
         Ralf Tautenhahn <rtautenh@ipb-halle.de>
 Maintainer: Colin A. Smith <csmith@scripps.edu>
 Depends: R (>= 1.9.0), methods
-Suggests: faahKO, msdata, multtest, rgl, MassSpecWavelet (>= 1.5.2)
+Suggests: faahKO, msdata, multtest, rgl, Rgraphviz, MassSpecWavelet (>= 1.5.2)
 SystemRequirements: NetCDF, zlib
 Description: Framework for processing and visualization of
         chromatographically separated and single-spectra mass spectral data. Imports from
